examples/test/testpolicy2384.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2384
  namespace: namespace176
spec:
  podSelector:
    matchLabels:
      key41: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value6
      podSelector:
        matchLabels:
          key29: value42
          key4: value11
          key2: value16
